<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".ui.activities.ForgetPasswordActivity">



    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_40sdp"
        app:srcCompat="@drawable/ic_logo_purble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:textSize="@dimen/_22sdp"
        android:text="@string/app_name"
        android:textColor="@color/blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_iv" />

    <TextView
        android:id="@+id/forget_password_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:gravity="center"
        android:textSize="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/app_name_tv"/>

    <TextView
        android:id="@+id/forget_password_hint_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please enter your email will send you rest link for enter new password"
        android:gravity="center"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_label"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="10dp"

        app:boxBackgroundColor="@android:color/white"
        app:hintTextColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_hint_label"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:drawablePadding="@dimen/_80sdp"
            android:drawableEnd="@drawable/ic_mail"
            android:paddingBottom="@dimen/_10sdp"
            android:hint="Enter your Email"

            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:cornerRadius="@dimen/_20sdp"
        android:background="@drawable/button_background_1"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:text="@string/send"
        android:elevation="@dimen/_6sdp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_18sdp"

        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/email_input"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@id/send_btn"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>