<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:drawablePadding="@dimen/_8sdp"
                android:drawableStart="@drawable/ic_logout"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="Are your sure want\n to logout"
                android:textSize="@dimen/_22sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/yes_btn"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/orange"
                    android:textAllCaps="true"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".1"
                    android:background="@android:color/darker_gray"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_btn"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="@dimen/_20sdp"
                    android:textAllCaps="true"
                    android:textColor="@color/grey"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    </LinearLayout>