<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.profile_settings.ProfileSettingsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header_layout"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_image"/>





        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".25"
            android:layout_marginStart="@dimen/_30sdp"
            android:scaleX="-1"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:tint="@color/white"
            android:padding="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_camera"
            android:elevation="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="@string/be_a_carrier"
            android:textColor="@color/white"
            android:background="@drawable/button_background_1"

            app:layout_constraintBottom_toBottomOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/profile_pic"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header_layout"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:textColor="@android:color/black"
            android:text="@string/full_name"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/full_name_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:boxBackgroundColor="@android:color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
            app:boxCornerRadiusBottomStart="@dimen/_20sdp"
            app:boxCornerRadiusTopEnd="@dimen/_20sdp"
            app:boxCornerRadiusTopStart="@dimen/_20sdp"
            app:boxStrokeColor="@android:color/darker_gray"
            app:hintEnabled="false"
            app:hintTextColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/app_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/full_name_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_full_name"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                android:paddingBottom="@dimen/_10sdp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/email"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"

            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:boxBackgroundColor="@android:color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
            app:boxCornerRadiusBottomStart="@dimen/_20sdp"
            app:boxCornerRadiusTopEnd="@dimen/_20sdp"
            app:boxCornerRadiusTopStart="@dimen/_20sdp"
            app:boxStrokeColor="@android:color/darker_gray"
            app:hintEnabled="false"
            app:hintTextColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/app_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                android:paddingBottom="@dimen/_10sdp" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/phone_number"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:boxBackgroundColor="@android:color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
            app:boxCornerRadiusBottomStart="@dimen/_20sdp"
            app:boxCornerRadiusTopEnd="@dimen/_20sdp"
            app:boxCornerRadiusTopStart="@dimen/_20sdp"
            app:boxStrokeColor="@android:color/darker_gray"
            app:hintEnabled="false"
            android:layout_marginBottom="@dimen/_10sdp"
            app:hintTextColor="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/app_name_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone_number"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                android:paddingBottom="@dimen/_10sdp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/button_background_1"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:text="@string/save"

            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sdp"
            android:textAllCaps="true"

            android:layout_marginBottom="@dimen/_10sdp"

            android:layout_marginEnd="@dimen/_20sdp" />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>