<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/corner_rounde_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/location_pin_top"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            app:srcCompat="@drawable/ic_location_pin"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_70sdp"
            android:background="@android:color/darker_gray"
            android:layout_marginStart="@dimen/_19sdp"/>

        <ImageView
            android:id="@+id/location_pin_bottom"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            app:srcCompat="@drawable/ic_location_pin"

            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/_30sdp"
            app:layout_goneMarginStart="@dimen/_10sdp"/>

<!--        <View-->
<!--            android:layout_width="@dimen/_1sdp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@android:color/darker_gray"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/location_pin_bottom"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            android:layout_marginStart="@dimen/_24sdp"-->
<!--            android:layout_marginTop="@dimen/_40sdp"-->
<!--            android:layout_marginBottom="@dimen/_40sdp"-->
<!--            app:layout_constraintVertical_bias=".5"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/location_pin_top"/>-->
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
       android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_from"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Borg El ARAB"
            android:drawableEnd="@drawable/ic_mail"
            android:drawablePadding="@dimen/_8sdp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrivals_at"

            android:layout_marginTop="@dimen/_40sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cairo"
            android:drawableEnd="@drawable/ic_mail"
            android:drawablePadding="@dimen/_8sdp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_5sdp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="end"
        app:layout_constraintHorizontal_bias=".8"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/layout1"
        android:layout_marginStart="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            app:srcCompat="@drawable/ic_visibility"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"/>

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            app:srcCompat="@drawable/ic_weight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_5sdp"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>